<package>
  <name>contactMonitor</name>
  <version>0.0.1</version>
  <description>
	  Monitors collisions in gazebo by checking (gazebo) topic /gazebo/default/physics/contacts"
    and then republishes into ROS the collision timestamp.
    To check that two models are colliding we provide a keyword for each models name.
    See launchfile for params

  </description>
  <maintainer email="mfernandezcarmona@lincoln.ac.uk">Manuel Fernandez-Carmona</maintainer>

  <license>BSD</license>

  <!-- <url type="bugtracker"></url> -->

  <author email="mfernandezcarmona@lincoln.ac.uk">Manuel Fernandez-Carmona</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
